# utility-belt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: bulk-rename-files.ipynb  convert-txt-to-table.ipynb  extract-data-from-pdfs.ipynb  extract-minimal-html.ipynb  merge-files-to-text.ipynb  open-url-print-to-pdf.ipynb  text-processing.ipynb
src/utility_belt/: __init__.py
src/utility_belt/cli/: merge_files_to_text.py
src/utility_belt/files/: create_files.py  create_repo.py  merge.py
src/utility_belt/pdf/: write_string_report_to_pdf.py
src/utility_belt/storage/: in_memory_database.py
src/utility_belt/text/: remove_emojis.py
src/utility_belt/web/: minimal_html.py
tests/: test_imports.py
